Fix homepage spacing

--- a/static/sass/pages/_frontpage.scss
+++ b/static/sass/pages/_frontpage.scss
@@ -80,6 +80,7 @@
 
   &--ad {
     margin-top: 0;
+    margin-bottom: 60px;
   }
   .ld-grid-main--two-cols {
     margin-bottom: 0;
